# plantopo

./: .development.env  .dockerignore  .env  .gitignore  .gitmodules  .golangci.yml  .prettierignore  .prettierrc  .spectral.yaml  .test.env  .tool-versions  CLAUDE.md  Caddyfile  Cargo.toml  Dockerfile  Justfile  Makefile  PLAN.md  README.md  api_server  api_server.Dockerfile  app.Dockerfile  attribution.txt  dev.Caddyfile  drizzle.config.ts  entrypoint.sh  esbuild.config.mjs  eslint.config.js  export_secrets.sh  garmin_explore_example.gpx  garmin_explore_example.raw.gpx  go.mod  go.sum  justfile  layout.kdl  lint-staged.config.js  lint-staged.tsc.config.js  matchmaker.Dockerfile  package-lock.json  package.json  (+8 more)
.githooks/: pre-commit
.husky/: pre-commit
api/: schema.json
api_server/: .env  main.go  sqlc.yaml
app/: .env  .env.development  .env.local.example  .env.production  .eslintrc.json  .gitignore  .prettierignore  Caddyfile  DefaultMap.ts  OpenSet.ts  Semaphore.ts  array.ts  dependencyReport.json  domUtil.ts  env.ts  errors.ts  fetch.ts  geo.ts  go.mod  jest.config.ts  jest.setup.ts  mapbox-gl-framerate.d.ts  math.ts  middleware.ts  next.config.js  next.config.mjs  package-lock.json  package.json  parsing.ts  pcg-random.d.ts  stringCmp.ts  tailwind.config.js  tailwind.config.ts  time.ts  tsconfig.json  vitest.config.ts
auth/: authz.go  login.go  registration.go  registration_test.go  user.go
backend/: .env  .env.local.example  .envrc  .mockery.yaml  Dockerfile  dev_seeds.sql  go.mod  go.sum  sqlc.yaml  staticcheck.conf  test_seeds.sql
cdk/: package-lock.json
core/: CMakeLists.txt  Cargo.toml
core/cli/: Cargo.toml
core/cli/src/: main.rs
core/common/: Cargo.toml
core/common/src/: client.rs  delta.rs  error.rs  frac_idx.rs  l_instant.rs  lib.rs  map_id.rs  prelude.rs  user_id.rs
core/common/src/attr/: mod.rs  value.rs
core/common/src/feature/: store.rs
core/common/src/layer/: store.rs
core/inspector/: inspector.cpp
core/schema/: aware.capnp  delta.capnp  save.capnp  sync.capnp
core/server/: Cargo.toml
core/server/src/: db.rs  lib.rs  main.rs  prelude.rs  shutdown.rs
core/server/src/routes/: authorize.rs  debug.rs  map_ws.rs  mod.rs
core/server/src/types/: app_state.rs  token_secret.rs
core/server/src/workers/: map_sync.rs
core/src/: lib.rs
core/web/: Cargo.toml  dev.html  watch
core/web/src/: client.rs  error.rs  lib.rs
db/: db.go  tracer.go
deploy/: main.go
design/: icon_credits.txt
drizzle/: 0000_flippant_shadowcat.sql  0002_native_session_init_token.sql  0004_prefs.sql  0005_strava_connection.sql  0006_strava_oauth_state.sql  0007_remove_counter_demo.sql  0008_grey_ghost_rider.sql  0009_recorded_track.sql  0010_update-recorded-track-nullability.sql  0011_icy_frog_thor.sql  0012_strong_bloodaxe.sql  0013_public_the_spike.sql  0014_improve-images.sql  0015_fix-references.sql  0016_add-track-description.sql  0017_nullable-point-timestamps.sql  0018_nullable-start-end-time.sql  0019_track-source-columns.sql  0020_sour_redwing.sql  0021_rename-to-track.sql
geoserver/: Dockerfile
infra/: README.md  api_cert.yaml  api_server.yaml  certificate.yaml  deployment.yaml  geder.yaml  imgproxy.yaml  ingress.yaml  matchmaker.yaml  ns.yaml  plantopo-api.container  plantopo-deploy  plantopo.container  pmtiles.yaml  redis.yaml  river_admin.yaml  service.yaml  staging_api_cert.yaml  sync_backend.yaml
layer_data/: layers.json
logger/: logger.go
mailer/: mailer.go  mailer_test.go  ses.go
map_sources/: Cargo.toml  layers.json
map_sources/sources/: mb_streets_sublayers.json  sprites.json
map_sources/sources/layers/: hillshading.json  satellite.json  usgs_tnm.json
map_sources/sources/tilesets/: mb_sat.json  mb_streets.json  os_vec.json
map_sources/src/: main.rs
mapsync/: config.go  matchmaker.go  matchmaker_test.go  session.go  session_test.go
matchmaker/: main.go
migrations/: 000_schema.up.sql  003_imports.down.sql  004_replace_maps.up.sql  005_replace_imports_for_new_maps.down.sql  006_add_filename_to_imports.down.sql  008_create_doclog.down.sql  008_create_doclog.up.sql  009_add_access_requests.down.sql  009_add_access_requests.up.sql  010_log_mail.down.sql  010_log_mail.up.sql  011_remove_old_map_storage.up.sql  (+19 more)
reproj_os_leisure/: Cargo.toml
reproj_os_leisure/src/: main.rs
reproj_os_leisure/test_assets/: out_tiled_pre_reproj.png.aux.xml
sources/rastertile/: main.py  pyproject.toml  rastertile
sync/: CMakeLists.txt  Cargo.toml  temp.enc
sync/cli/: Cargo.toml
sync/cli/src/: main.rs
sync/core/: Cargo.toml  build.rs
sync/core/src/: any_id.rs  attr.rs  aware.rs  capnp_support.rs  client.rs  client_id.rs  error.rs  frac_idx.rs  g_map.rs  instant.rs  l_clock.rs  l_instant.rs  lib.rs  lww_reg.rs  merge.rs  op.rs  prelude.rs  subscriber_registry.rs  sync_proto.rs  tp_map.rs  v_clock.rs
sync/core/src/attr/: key.rs  store.rs  value.rs
sync/core/src/feature/: at.rs  feature_type.rs  id.rs  mod.rs  store.rs
sync/core/src/layer/: id.rs  mod.rs  store.rs
sync/inspector/: build.sh
sync/schema/: delta.capnp  sync.capnp  types.capnp
sync/server/: Cargo.toml
sync/server/src/: check_token.rs  db.rs  lib.rs  main.rs  prelude.rs
sync/server/src/routes/: authorize.rs  debug.rs  disconnect.rs  map_ws.rs  mod.rs  prelude.rs
sync/server/src/types/: app_state.rs  map_states.rs  mod.rs  user_id.rs
sync/server/src/workers/: map_sync.rs  mod.rs
sync/web/: Cargo.toml  build  dev.html  watch
sync/web/src/: client.rs  error.rs  lib.rs
sync_engine/: Cargo.toml
sync_engine/src/: change.rs  fid.rs  frac_idx.rs  lib.rs  lid.rs  main.rs  metadata.rs  op.rs
sync_engine/src/store/: local_file.rs  mod.rs  prod.rs  redis.rs
sync_server/: .gitignore  Cargo.toml
sync_server/src/: db.rs  dispatcher.rs  lib.rs  main.rs  manager.rs  map_state.rs  prelude.rs
sync_server_engine/: Cargo.toml  debug_run.sh
sync_server_engine/src/: main.rs
web/native/plantopo_sync_engine/: Cargo.toml  README.md
web/native/plantopo_sync_engine/src/: awareness.rs  awareness_update.rs  lib.rs  lock.rs  message.rs  state_vector.rs
(+1559 files in other folders)
