[workspace]
members = ["sync_engine", "layer_data/gen"]
exclude = ["reproj_os_leisure", "core", "schema"]
resolver = "2"

[profile.release]
lto = true

[workspace.dependencies]
petgraph = "0.6.3"
eyre = "0.6.8"
color-eyre = "0.6.2"
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = "1.4.1"
rand = { version = "0.8.5", features = ["small_rng"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.3"
clap = { version = "4", features = ["derive"] }
serde_repr = "0.1.15"
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
parking_lot = "0.12.1"
redis = { version = "0.23.2", features = ["json"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
