[package]
name = "plantopo-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.61"
serde = { version = "1.0.152", features = ["derive"] }
serde-wasm-bindgen = "0.4.5"
serde_json = "1.0.93"
wasm-bindgen = "0.2.84"
wee_alloc = "0.4.5"
