[workspace]
members = ["core", "web", "server", "cli"]

[profile.release]
lto = true

[workspace.dependencies.capnp]
version = "0.17"
git = "https://github.com/capnproto/capnproto-rust.git"
rev = "99ddcb4156e60ae927783452bb7900e82d373cf2"
default-features = false

[workspace.dependencies.capnpc]
version = "0.17"
git = "https://github.com/capnproto/capnproto-rust.git"
rev = "99ddcb4156e60ae927783452bb7900e82d373cf2"
