[package]
name = "plantopo_sync_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre.workspace = true
tracing.workspace = true
tracing-error.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
petgraph.workspace = true
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
color-eyre = "0.6.2"
ctrlc = { version = "3.4.0", features = ["termination"] }
ascii = { version = "1.1.0", features = ["serde"] }
serde_repr = "0.1.15"
rand.workspace = true
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
parking_lot = "0.12.1"

[dev-dependencies]
pretty_assertions = "1.4.0"
