[package]
name = "plantopo_sync_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre.workspace = true
tracing.workspace = true
tracing-error.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
petgraph.workspace = true
serde_json.workspace = true
serde.workspace = true
color-eyre.workspace = true
serde_repr.workspace = true
rand.workspace = true
crossbeam.workspace = true
parking_lot.workspace = true
redis.workspace = true
clap.workspace = true

[dev-dependencies]
pretty_assertions = "1.4.0"
