[package]
name = "plantopo_sync_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
eyre = "0.6.8"
lib0 = "0.16.2"
parking_lot = "0.12.1"
rocksdb = "0.20.1"
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.38"
tokio = "1.25.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "ansi"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }
warp = "0.3.3"
weak-table = "0.3.2"
y-sync = "0.2.0"
yrs = "0.16.2"
yrs-warp = "0.4.0"

[dev-dependencies]
assert-json-diff = "2.0.2"
serde_json = "1.0.93"
tempfile = "3.3.0"
