[package]
name = "plantopo_sync_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
capnp.workspace = true
color-eyre.workspace = true
eyre.workspace = true
plantopo-schema.workspace = true
rocksdb = { version = "0.21.0", features = [
  "lz4",
  "jemalloc",
], default-features = false }
tracing.workspace = true
tracing-error.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
smallvec.workspace = true
rand = { workspace = true, features = ["small_rng"] }
compact_str.workspace = true
axum = { version = "0.6.18", features = ["ws"] }
tokio-util = "0.7.8"
tokio = { version = "1.28.2", features = ["full"] }
bytes.workspace = true
tokio-stream = "0.1.14"
futures-util = "0.3.28"
