[package]
name = "plantopo_sync_server_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["clock"] }
eetf = "0.8.0"
erlang_port = "0.2.0"
eyre = "0.6.8"
lib0 = "0.16.2"
parking_lot = "0.12.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_bytes = "0.11.9"
serde_eetf = "0.2.0"
serde_json = { version = "1.0.93", features = ["raw_value"] }
sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono", "json"] }
tokio = { version = "1.26.0", features = ["macros", "rt", "sync", "time"] }
uuid = { version = "1.3.0", features = ["serde"] }
y-sync = "0.2.0"
yrs = "0.16.2"

[patch.crates-io]
y-sync = { git = "https://github.com/danielzfranklin/y-sync" }
