[package]
name = "plantopo-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
std = ["capnp/std"]
web = ["getrandom/js", "js-sys"]
serialize-user-id = []
default = ["std", "serialize-user-id"]

[dependencies]
capnp = { workspace = true }
hashbrown = { version = "0.13.2", default-features = false, features = [
  "nightly",
  "inline-more",
  "ahash",
] }
ordered-float = { version = "3.6.0", default-features = false }
postcard = { version = "1.0.4", default-features = false, features = ["alloc"] }
rand = { version = "0.8.5", default-features = false, features = [
  "alloc",
  "getrandom",
] }
getrandom = { version = "0.2.8", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }
rand_core = { version = "0.6.4", default-features = false, features = [
  "alloc",
] }
smallvec = { version = "1.10.0", features = ["union"] }
smol_str = { version = "0.1.24", default-features = false }
tracing = { version = "0.1.37", default-features = false, features = [
  "attributes",
] }
uuid = { version = "1.3.0", default-features = false }
js-sys = { version = "0.3.61", optional = true }
serde = { version = "1.0.163", features = ["derive"] }

[dev-dependencies]
color-eyre = "0.6.2"
eyre = "0.6.8"
pretty_assertions = "1.3.0"
tracing-subscriber = { version = "0", features = ["env-filter"] }
uuid = { version = "1", features = ["std"] }

[build-dependencies]
capnpc = { workspace = true }
