[package]
name = "plantopo-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Shells out to a cli on every message, only for development

[dependencies]
plantopo-common = { path = "../common" }
color-eyre = "0.6.2"
eyre = "0.6.8"
uuid = { version = "1.3.0", features = ["serde"] }
serde = { version = "1.0.159", features = ["derive"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing = "0.1.37"
futures = "0.3.28"
parking_lot = "0.12.1"
tower-http = { version = "0.4.0", features = ["catch-panic", "trace"] }
bytes = "1.4.0"
pasetors = "0.6.6"
chrono = "0.4.24"
dotenvy = "0.15.7"
tokio-util = "0.7.7"
capnp = { workspace = true, default-features = true, features = [
  "sync_reader",
] }
rand_chacha = "0.3.1"
rand = "0.8.5"
pin-project = "1.0.12"
tokio-retry = "0.3.0"
console-subscriber = { version = "0.1.8", features = ["parking_lot"] }
tracing-error = "0.2.0"

[dependencies.axum]
version = "0.6.12"
features = ["ws", "macros", "tokio", "headers", "query"]

[dependencies.sqlx]
version = "0.6.3"
features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"]

[dependencies.tokio]
version = "1.27.0"
features = ["full", "signal", "tracing"]
