[package]
name = "plantopo-sync-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ordered-float = { version = "3.6.0", default-features = false, features = ["serde"] }
postcard = { version = "1.0.4", default-features = false, features = ["alloc"] }
rand = { version = "0.8.5", default-features = false, features = ["alloc"] }
rand_chacha = { version = "0.3.1", default-features = false, features = [
  "serde1",
] }
rand_core = { version = "0.6.4", default-features = false, features = [
  "alloc",
] }
serde = { version = "1.0.158", default-features = false, features = [
  "derive",
  "alloc",
] }
smallvec = { version = "1.10.0", features = ["serde"] }
smol_str = { version = "0.1.24", default-features = false, features = [
  "serde",
] }
uuid = { version = "1.3.0", default-features = false, features = ["serde"] }

[dev-dependencies]
color-eyre = "0.6.2"
eyre = "0.6.8"
pretty_assertions = "1.3.0"
