[package]
name = "plantopo-sync-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
std = []
default = ["std"]

[dependencies]
capnp = { version = "0.16.1", default-features = false }
hashbrown = { version = "0.13.2", default-features = false, features = ["nightly", "inline-more", "ahash"] }
ordered-float = { version = "3.6.0", default-features = false }
postcard = { version = "1.0.4", default-features = false, features = ["alloc"] }
rand = { version = "0.8.5", default-features = false, features = [
  "alloc",
  "getrandom",
] }
rand_chacha = { version = "0.3.1", default-features = false }
rand_core = { version = "0.6.4", default-features = false, features = [
  "alloc",
] }
smallvec = { version = "1.10.0", features = ["union"] }
smol_str = { version = "0.1.24", default-features = false }
tracing = { version = "0.1.37", default-features = false, features = [
  "attributes",
] }
uuid = { version = "1.3.0", default-features = false }

[dev-dependencies]
color-eyre = "0.6.2"
eyre = "0.6.8"
pretty_assertions = "1.3.0"
tracing-subscriber = { version = "0", features = ["env-filter"] }
uuid = { version = "1", features = ["std"] }

[build-dependencies]
capnpc = "0.16.3"
