[package]
name = "plantopo-sync-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plantopo-sync-core = { path = "../core" }
color-eyre = "0.6.2"
eyre = "0.6.8"
uuid = { version = "1.3.0", features = ["serde"] }
serde = { version = "1.0.159", features = ["derive"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing = "0.1.37"
axum = { version = "0.6.12", features = [
  "ws",
  "macros",
  "tokio",
  "headers",
  "query",
] }
futures = "0.3.28"
tokio = { version = "1.27.0", features = ["full", "signal"] }
parking_lot = "0.12.1"
tower-http = { version = "0.4.0", features = ["catch-panic"] }
bytes = "1.4.0"
pasetors = "0.6.6"
chrono = "0.4.24"
sqlx = { version = "0.6.3", features = [
  "runtime-tokio-native-tls",
  "postgres",
  "uuid",
  "chrono",
] }
dotenvy = "0.15.7"
tokio-util = "0.7.7"
