[package]
name = "plantopo-sync-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.2.8", features = ["js"] }
js-sys = "0.3.61"
plantopo-sync-core = { path = "../core" }
postcard = "1.0.4"
serde = { version = "1.0.158", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
uuid = { version = "1.3.0", features = ["v4"] }
wasm-bindgen = { version = "0.2.84", features = ["serde", "serde-serialize"] }
