[package]
name = "plantopo-sync-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
capnp = { version = "0.16.1", default-features = false }
getrandom = { version = "0.2.8", features = ["js"], default-features = false }
js-sys = "0.3.61"
plantopo-sync-core = { path = "../core", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }
rand_core = "0.6.4"
tracing-wasm = "0.2.1"
uuid = { version = "1.3.0", features = ["v4"] }
wasm-bindgen = { version = "0.2.84", features = ["enable-interning"] }

[dependencies.tracing]
version = "0.1.37"
default-features = false
features = ["max_level_debug", "release_max_level_warn"]

[dependencies.web-sys]
version = "0.3.61"
features = ["console"]

[package.metadata.wasm-pack.profile.release]
# wasm-opt = ['-Os']
wasm-opt = false
